--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,9 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
+    // okhttp
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
+
 }
