--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -88,9 +91,9 @@ dependencies {
 
     // Room dependency
     def room_version = "2.2.0"
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
